Fixed layout bug where the readme panel wasn't centered on mobile devices

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -49,6 +49,7 @@ h3 {
 #readme-container #current-repo {
     z-index: 0;
     position: static;
+    margin: auto;
 }
 
 #readme-container #next-repo {
